--- a/index.html
+++ b/index.html
@@ -10,21 +10,17 @@
     </head>
     <body>
         <div id="admin-box">
-            <h1 Class="heading">Login Page</h1>
-        
-     <head>
+            <h1 Class="heading">Login Page</h1>  
 <form>
-<label for="user"> Enter your user  Name:</label>
- <input
-  type="text"
+<label for="user"> Enter your user  Name:</label><br/>
+ <input type="text"
   name="user"
-  mexlength=""8"
+  mexlength="8"
   placeholder="Nazrul Ahammed"
   required
-  />
-
- <label for="pass"> Enter your Password :</label>
- <input type="password" name="pass"Placeholder="1koplgfddssssa"required/>
+  /><br/>
+ <label for="pass"> Enter your Password :</label><br/>
+ <input type="password" name="pass"Placeholder="1koplgfddssssa"required/><br/>
  <input type="submit"><br/>
  </form>
  <p>Con't remember your pasword ?  please 
