--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
- <HTML lang="en">
-    <head>
-        <meta charset="UFT-8"/>  
-        <meta http-equiv="X-UA-compatible" content="IE-Edge"/>
-        <meta name="viewport" content="width=device-width, inisial-scale=1.0"/>
-        <!--main-->
-        <link rel="stylesheet" href="css/style.css"/>
-    <title>Login Page</title>
-    </head>
-    <body>
-        <div id="admin-box">
-            <h1 Class="heading">Login Page</h1>  
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Logine page</title>
+
+    <!google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,300;1,400;1,500&display=swap" rel="stylesheet">
+
+  
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<div class="container">
+  <h1 class="aqua-color">Logine page</h1>
+
 <form>
-<label for="user"> Enter your user  Name:</label><br/>
- <input type="text"
-  name="user"
-  mexlength="8"
-  placeholder="Nazrul Ahammed"
-  required
-  /><br/>
- <label for="pass"> Enter your Password :</label><br/>
- <input type="password" name="pass"Placeholder="1koplgfddssssa"required/><br/>
- <input type="submit"><br/>
- </form>
- <p>Con't remember your pasword ?  please 
-    <a href="page/Reset.html"Target=_blank> Reset here</a> 
-    </p>
+  <label for="user">User  name </label>
+  <input type="text" name="user" placeholder="Enter your User name">
+  <label for="pass" class="aqua-color">Password </label>
+  <input type="password" name= "pass" placeholder="Enter your password">
+  <input type="submit" id="btn" value="submit">
 
- <p>Don't have an account  please 
-     <a href="page/Register.html"Target=_blank>Register here</a> 
-</p>
+<P id="register">Don't haven't account  Register here<a href="page/register.html" target="_blank"><b> Register here</b></a></P>
+<P class="reset aqua-color">Can't remember your passwoard <a href="page/reset.html" target="_blank">Reset here</a></P>
+</form>
+</div>
+</body>
+</html>
 
-</h1>
+
+
